try to fix banner on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -132,6 +132,7 @@ ul.buttons {
 	background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../images/banner_mobile.jpg");
 	background-size: 10em, 10em, auto, cover;
 	padding: 6em 0;
+	background-attachment: scroll, scroll, scroll, scroll;
 }
 
 #banner .inner {
